# smart_track_v2

./: CMakeLists.txt  README.md  package.xml
launch/: depth_detection.launch.py  lidar_fusion_detection.launch.py  smart_track_v2.launch.py  target.launch.py
rviz/: l2d.rviz  l2i.rviz
scripts/: gimbal_stabilizer.py
src/: depth_map_detection_localization.cpp  l2d_pose_node.cpp  l2i_pose_node.cpp  lidar_camera_fusion_with_detection.cpp
